# Shanduko

./: .env  README.md  check_dashboard.py  debug_dashboard.py  init_admin.py  init_database.py  init_model.py  interpretation_panel.py  new_dashboard.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_shanduko.py  run_shanduko.spec  setup.py  shanduko.bat  simple_dashboard.py  test_app.py  test_dashboard.py  test_database.py  test_imports.py  water_quality.db  water_quality_data_20250221_014247.csv  water_quality_data_20250221_015647.csv  water_quality_data_20250221_023733.csv  water_quality_data_20250221_115655.csv  water_quality_data_20250223_112456.csv  water_quality_data_20250224_092755.csv  water_quality_data_20250224_120229.csv  water_quality_data_20250224_120556.csv  water_quality_data_20250224_152814.csv  water_quality_data_20250224_232421.csv  water_quality_data_20250226_105524.csv  water_quality_data_20250226_220008.csv  water_quality_data_20250306_154805.csv  water_quality_data_20250306_170307.csv
checkpoints/: best_model.pth
reports/metrics/: metrics_sample.json
src/: __init__.py
src/models/: model_training.py  prediction_system.py
src/shanduko/: __init__.py  app.py
src/shanduko.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shanduko/analysis/: standalone_analysis.py
src/shanduko/api/: metrics_endpoints.py
src/shanduko/auth/: __init__.py  auth_service.py  models.py  user_manager.py
src/shanduko/config/: model_config.py
src/shanduko/data/: analyze_data.py  (+4 more)
tests/: test_data_quality.py
(+30 files in other folders)
