[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shanduko"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "AI-Powered Water Quality Monitoring System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "ttkbootstrap",
    "sqlalchemy",
    "python-dotenv",
    "pyyaml",
    "bcrypt",
    "pillow",
    "pyserial",
    "scipy",
    "scikit-learn",
    "pytest",
    "psycopg2-binary",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["shanduko"]